<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/neo4j_setting_header">

        <EditTextPreference
            app:key="url"
            app:title="@string/neo4j_setting_url"
            app:defaultValue="https://press_your_host_here:7473"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="username"
            app:title="@string/neo4j_setting_username"
            app:defaultValue="neo4j"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="password"
            app:title="@string/neo4j_setting_password"
            app:defaultValue="1232456"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>


</PreferenceScreen>