<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/url_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_neo4j_input_dialog_url" />

    <EditText
        android:id="@+id/url_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/username_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_neo4j_input_dialog_username" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/password_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_neo4j_input_dialog_password" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>