<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/person_value_setter_view">

    <LinearLayout
        android:id="@+id/person_value_setter_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/person_image"
            android:layout_marginTop="10dp"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher_round" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/person_name_inputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/person_info_inputer"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:hint="@string/person_info"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/person_age_inputer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_age"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/gender_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gender" />

        <Spinner
            android:id="@+id/blood_type_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/blood_type" />


    </LinearLayout>
</ScrollView>
